# usersapi

./: .coverage  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  database.db  db-compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
app/: app.py  database.py  schemas.py  security.py  settings.py
app/core/: database.py  security.py  settings.py
app/db/: base.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  auth.py  ping.py  todos.py  users.py
app/schemas/: todo_schemas.py  users_schema.py
migrations/: env.py
migrations/versions/: 94f4125546c2_create_todos_table.py  d341062150b4_create_users_table.py
tests/: conftest.py  factories.py  test_app.py  test_db.py  test_security.py
tests/db/: test_db.py
tests/routes/: test_app.py  test_auth.py  test_todos.py  test_users.py
tests/use_cases/: test_security.py
